compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__use___invalid_callback_type.snap
---
source: compiler-core/src/type_/tests/use_.rs
assertion_line: 204
expression: "\nlet x = fn(f) { f() + 1 }\nuse <- x()\nNil\n"
---
----- SOURCE CODE

let x = fn(f) { f() + 1 }
use <- x()
Nil


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:4:1
  │
4 │ Nil
  │ ^^^

Expected type:

    Int

Found type:

    Nil
