compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__use___use_with_function_that_doesnt_take_callback_as_last_arg_3.snap
---
source: compiler-core/src/type_/tests/use_.rs
assertion_line: 137
expression: "\nlet f = fn(a, b) { a + b }\nuse <- f(1)\n123\n"
---
----- SOURCE CODE

let f = fn(a, b) { a + b }
use <- f(1)
123


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:3:8
  │
3 │ use <- f(1)
  │        ^^^^

The function on the right hand side of `<-` has to take a callback function
as its last argument. But the last argument of this function has type:

    Int

See: https://tour.rakun.run/advanced-features/use/
