compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__use___wrong_callback_arg.snap
---
source: compiler-core/src/type_/tests/use_.rs
assertion_line: 290
expression: "\nlet x = fn(f) { \"Hello, \" ++ f(1) }\nuse n <- x()\nn ++ \"Giacomo!\"\n"
---
----- SOURCE CODE

let x = fn(f) { "Hello, " ++ f(1) }
use n <- x()
n ++ "Giacomo!"


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:4:1
  │
4 │ n ++ "Giacomo!"
  │ ^

The ++ operator expects arguments of this type:

    String

But this argument has this type:

    Int
